--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     
     <div class="hero">
-        <img src="/imgs/Hero.svg" alt="Hero Image">
+        <img src="../imgs/Hero.svg" alt="Hero Image">
         <section class="hero-text">
             <h1 data-text="Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra">
                 Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra
