--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     
     <div class="hero">
-        <img src="../imgs/Hero.svg" alt="Hero Image">
+        <img src="imgs/Hero.svg" alt="Hero Image">
         <section class="hero-text">
             <h1 data-text="Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra">
                 Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra
@@ -43,7 +43,7 @@
         <!-- Falta sección de inicio -->
         <div class = "sobre-mi" id="sobre-mi">
             <section class="sm-contenedor">
-                <img src="/imgs/AboutMeTitle.png" alt="About Me">
+                <img src="imgs/AboutMeTitle.png" alt="About Me">
                 <p data-translate="about.description" class ="description">Descripción breve sobre ti y tus habilidades.</p>
                 <section class="tags" data-translate="about.tags"></section>
             </section>
@@ -55,13 +55,13 @@
             <h2 data-translate="specializations.title">Especializaciones</h2>
             <section class="specializations">
                 <section class="box">
-                    <img src="/imgs/unity.png" alt="Unity">
+                    <img src="imgs/unity.png" alt="Unity">
                     <h3 data-translate="specializations.unity.title">Unity Developer</h3>
                     <p data-translate="specializations.unity.description">Descripción de tus habilidades en desarrollo de videojuegos.</p>
                 </section>
 
                 <section class="box">
-                    <img src="/imgs/animation.png" alt="Anim3D">
+                    <img src="imgs/animation.png" alt="Anim3D">
                     <h3 data-translate="specializations.animation.title">Animadora 3D</h3>
                     <p data-translate="specializations.animation.description">Descripción de tus habilidades en animación 3D.</p>
                 </section>
@@ -73,7 +73,7 @@
             <section>
                 <section class="project">
                     <div class="project-img">
-                        <img src="/imgs/FARM/game1.png" alt="Proyecto 1">
+                        <img src="imgs/FARM/game1.png" alt="Proyecto 1">
                         <video muted loop preload="metadata">
                             <source src="vds/FARM_REEL.mp4" type="video/mp4">
                         </video>
@@ -86,7 +86,7 @@
                 
                 <section class="project">
                     <div class="project-img">
-                        <img src="/imgs/Maya Bony.png" alt="Proyecto 2">
+                        <img src="imgs/Maya Bony.png" alt="Proyecto 2">
                         <video muted loop preload="metadata">
                             <source src="vds/ANIM_REEL.mp4" type="video/mp4">
                         </video>
@@ -99,7 +99,7 @@
 
                 <section class="project">
                     <div class="project-img">
-                        <img src="/imgs/ACOL/game1.png" alt="Proyecto 3">
+                        <img src="imgs/ACOL/game1.png" alt="Proyecto 3">
                         <video muted loop preload="metadata">
                             <source src="vds/ACOL_REEL.mp4" type="video/mp4">
                         </video>
@@ -118,47 +118,47 @@
                 <section class="game-projects" id="gameProjectsSlider">
                     <!-- PROYECTOS NUEVOS AGREGAR ARRIBA -->
                     <section class="game" onclick="openGameProject('project9')">
-                        <img src="/imgs/DTCTV/logo.png" alt="Proyecto 9">
+                        <img src="imgs/DTCTV/logo.png" alt="Proyecto 9">
                         <h3 data-translate="game_projects.project9.title">Proyecto 9</h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project8')">
-                        <img src="/imgs/FARM/logo.png" alt="Proyecto 8">
+                        <img src="imgs/FARM/logo.png" alt="Proyecto 8">
                         <h3 data-translate="game_projects.project8.title">Proyecto 8</h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project7')">
-                        <img src="/imgs/ACOL/logo.png" alt="Proyecto 7">
+                        <img src="imgs/ACOL/logo.png" alt="Proyecto 7">
                         <h3 data-translate="game_projects.project7.title">Proyecto 7</h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project6')">
-                        <img src="/imgs/WAD/logo.png" alt="Proyecto 6">
+                        <img src="imgs/WAD/logo.png" alt="Proyecto 6">
                         <h3 data-translate="game_projects.project6.title">Proyecto 6</h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project5')">
-                        <img src="/imgs/MEMO/logo.png" alt="Proyecto 5">
+                        <img src="imgs/MEMO/logo.png" alt="Proyecto 5">
                         <h3 data-translate="game_projects.project5.title">Proyecto 5</h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project4')">
-                        <img src="/imgs/NUM/logo.png" alt="Proyecto 4">
+                        <img src="imgs/NUM/logo.png" alt="Proyecto 4">
                         <h3 data-translate="game_projects.project4.title">Proyecto 4</h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project3')">
-                        <img src="/imgs/RAT/logo.png" alt="Proyecto 3">
+                        <img src="imgs/RAT/logo.png" alt="Proyecto 3">
                         <h3 data-translate="game_projects.project3.title">Proyecto 3</h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project2')">
-                        <img src="/imgs/HAIN/logo.png" alt="Proyecto 2">
+                        <img src="imgs/HAIN/logo.png" alt="Proyecto 2">
                         <h3 data-translate="game_projects.project2.title">Proyecto 2</h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project1')">
-                        <img src="/imgs/FEF/logo.png" alt="Proyecto 1">
+                        <img src="imgs/FEF/logo.png" alt="Proyecto 1">
                         <h3 data-translate="game_projects.project1.title">Proyecto 1</h3>
                     </section>
                 </section>
