animation pic fix

--- a/index.html
+++ b/index.html
@@ -40,14 +40,12 @@
     </section>
 
     <main>
-        <!-- Falta sección de inicio -->
         <div class = "sobre-mi" id="sobre-mi">
             <section class="sm-contenedor">
                 <img src="imgs/AboutMeTitle.png" alt="About Me">
                 <p data-translate="about.description" class ="description">Descripción breve sobre ti y tus habilidades.</p>
                 <section class="tags" data-translate="about.tags"></section>
             </section>
-            <!-- Aca van botones de referencias -->
         </div>
 
 
@@ -61,7 +59,7 @@
                 </section>
 
                 <section class="box">
-                    <img src="imgs/animation.png" alt="Anim3D">
+                    <img src="imgs/animation.PNG" alt="Anim3D">
                     <h3 data-translate="specializations.animation.title">Animadora 3D</h3>
                     <p data-translate="specializations.animation.description">Descripción de tus habilidades en animación 3D.</p>
                 </section>
