animation pic fix v2

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </section>
 
                 <section class="box">
-                    <img src="imgs/animation.PNG" alt="Anim3D">
+                    <img src="imgs/animation.png" alt="Anim3D">
                     <h3 data-translate="specializations.animation.title">Animadora 3D</h3>
                     <p data-translate="specializations.animation.description">Descripción de tus habilidades en animación 3D.</p>
                 </section>
