fixed hain img | centered contact text

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
         <div class="contact" id="contacto">
             <h2 data-translate="contact.title">¡Hablemos!</h2>
-            <p data-translate="contact.description">Descripción breve sobre cómo pueden contactarte.</p>
+            <p data-translate="contact.description">Descripción breve sobre cómo pueden contactarme.</p>
             <section class="contact-container">                
                 <section class="contact-item">
                     <a class="contact-btn" href="mailto:agustinavinciguerra@gmail.com">E-mail</a>
