--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
 
     <section class="intro-text">
+        <img src="imgs/Deco/star.svg" alt="star">
         <h2 data-translate="hero.intro-title">Llevando cada idea al siguiente nivel</h2>
         <p data-translate="hero.intro-text">Explora mis proyectos y habilidades en el desarrollo de videojuegos.</p>
     </section>
@@ -43,6 +44,7 @@
         <div class = "sobre-mi" id="sobre-mi">
             <section class="sm-contenedor">
                 <img src="imgs/AboutMeTitle.png" alt="About Me">
+                <img src="imgs/Deco/boom.svg" alt="boom">
                 <p data-translate="about.description" class ="description">Descripción breve sobre ti y tus habilidades.</p>
                 <section class="tags" data-translate="about.tags"></section>
             </section>
@@ -177,6 +179,7 @@
         </div>
 
         <div class="blogs">
+            <img src="imgs/Deco/b_boom.svg" alt="Hero Image">
             <h2 data-translate="blog.title">Blog</h2>
             <div>
                 <section class="blog-posts" id="blogPostsSlider">
