--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="imgs/Hero.svg" alt="Hero Image">
         <section class="hero-text">
             <h1 data-text="Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra">
-                Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra
+                Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra // Agustina Vinciguerra
             </h1>
         </section>
     </div>
