--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <section class="intro-text">
         <img src="imgs/Deco/star.svg" alt="star">
-        <h2 data-translate="hero.intro-title">Llevando cada idea al siguiente nivel</h2>
-        <p data-translate="hero.intro-text">Explora mis proyectos y habilidades en el desarrollo de videojuegos.</p>
+        <h2 data-translate="hero.intro-title"></h2>
+        <p data-translate="hero.intro-text"></p>
     </section>
 
     <main>
@@ -45,31 +45,31 @@
             <section class="sm-contenedor">
                 <img src="imgs/AboutMeTitle.png" alt="About Me">
                 <img src="imgs/Deco/boom.svg" alt="boom">
-                <p data-translate="about.description" class ="description">Descripción breve sobre ti y tus habilidades.</p>
+                <p data-translate="about.description" class ="description"></p>
                 <section class="tags" data-translate="about.tags"></section>
             </section>
         </div>
 
 
         <div class="especializaciones">
-            <h2 data-translate="specializations.title">Especializaciones</h2>
+            <h2 data-translate="specializations.title"></h2>
             <section class="specializations">
                 <section class="box">
                     <img src="imgs/unity.png" alt="Unity">
-                    <h3 data-translate="specializations.unity.title">Unity Developer</h3>
-                    <p data-translate="specializations.unity.description">Descripción de tus habilidades en desarrollo de videojuegos.</p>
+                    <h3 data-translate="specializations.unity.title"></h3>
+                    <p data-translate="specializations.unity.description"></p>
                 </section>
 
                 <section class="box">
                     <img src="imgs/animation.png" alt="Anim3D">
-                    <h3 data-translate="specializations.animation.title">Animadora 3D</h3>
-                    <p data-translate="specializations.animation.description">Descripción de tus habilidades en animación 3D.</p>
+                    <h3 data-translate="specializations.animation.title"></h3>
+                    <p data-translate="specializations.animation.description"></p>
                 </section>
             </section>
         </div>
 
         <div class="project-highlights" id="proyectos">
-            <h2 data-translate="featured_projects.title">Proyectos destacados</h2>
+            <h2 data-translate="featured_projects.title"></h2>
             <section>
                 <section class="project">
                     <div class="project-img">
@@ -79,8 +79,8 @@
                         </video>
                     </div>
                     <div class="project-info">
-                        <h3 data-translate="featured_projects.project1.title">Proyecto 1</h3>
-                        <p data-translate="featured_projects.project1.description">Descripción breve del proyecto y su relevancia.</p>
+                        <h3 data-translate="featured_projects.project1.title"></h3>
+                        <p data-translate="featured_projects.project1.description"></p>
                     </div>
                 </section>
                 
@@ -92,8 +92,8 @@
                         </video>
                     </div>
                     <div class="project-info">
-                        <h3 data-translate="featured_projects.project2.title">Proyecto 2</h3>
-                        <p data-translate="featured_projects.project2.description">Descripción breve del proyecto y su relevancia.</p>
+                        <h3 data-translate="featured_projects.project2.title"></h3>
+                        <p data-translate="featured_projects.project2.description"></p>
                     </div>
                 </section>
 
@@ -105,61 +105,61 @@
                         </video>
                     </div>
                     <div class="project-info">
-                        <h3 data-translate="featured_projects.project3.title">Proyecto 3</h3>
-                        <p data-translate="featured_projects.project3.description">Descripción breve del proyecto y su relevancia.</p>
+                        <h3 data-translate="featured_projects.project3.title"></h3>
+                        <p data-translate="featured_projects.project3.description"></p>
                     </div>
                 </section>
             </section>
         </div>
 
         <div class="game-projects-container">
-            <h2 data-translate="game_projects.title">Mis proyectos: Videojuegos</h2>
+            <h2 data-translate="game_projects.title"></h2>
             <div>
                 <section class="game-projects" id="gameProjectsSlider">
                     <!-- PROYECTOS NUEVOS AGREGAR ARRIBA -->
                     <section class="game" onclick="openGameProject('project9')">
                         <img src="imgs/DTCTV/logo.png" alt="Proyecto 9">
-                        <h3 data-translate="game_projects.project9.title">Proyecto 9</h3>
+                        <h3 data-translate="game_projects.project9.title"></h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project8')">
                         <img src="imgs/FARM/logo.png" alt="Proyecto 8">
-                        <h3 data-translate="game_projects.project8.title">Proyecto 8</h3>
+                        <h3 data-translate="game_projects.project8.title"></h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project7')">
                         <img src="imgs/ACOL/logo.png" alt="Proyecto 7">
-                        <h3 data-translate="game_projects.project7.title">Proyecto 7</h3>
+                        <h3 data-translate="game_projects.project7.title"></h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project6')">
                         <img src="imgs/WAD/logo.png" alt="Proyecto 6">
-                        <h3 data-translate="game_projects.project6.title">Proyecto 6</h3>
+                        <h3 data-translate="game_projects.project6.title"></h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project5')">
                         <img src="imgs/MEMO/logo.png" alt="Proyecto 5">
-                        <h3 data-translate="game_projects.project5.title">Proyecto 5</h3>
+                        <h3 data-translate="game_projects.project5.title"></h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project4')">
                         <img src="imgs/NUM/logo.png" alt="Proyecto 4">
-                        <h3 data-translate="game_projects.project4.title">Proyecto 4</h3>
+                        <h3 data-translate="game_projects.project4.title"></h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project3')">
                         <img src="imgs/RAT/logo.png" alt="Proyecto 3">
-                        <h3 data-translate="game_projects.project3.title">Proyecto 3</h3>
+                        <h3 data-translate="game_projects.project3.title"></h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project2')">
                         <img src="imgs/HAIN/logo.png" alt="Proyecto 2">
-                        <h3 data-translate="game_projects.project2.title">Proyecto 2</h3>
+                        <h3 data-translate="game_projects.project2.title"></h3>
                     </section>
 
                     <section class="game" onclick="openGameProject('project1')">
                         <img src="imgs/FEF/logo.png" alt="Proyecto 1">
-                        <h3 data-translate="game_projects.project1.title">Proyecto 1</h3>
+                        <h3 data-translate="game_projects.project1.title"></h3>
                     </section>
                 </section>
                 <div class="nav-pj">
@@ -170,7 +170,7 @@
         </div>
 
         <div  class="animation-projects-container">
-            <h2 data-translate="animation_projects.title">Mis proyectos: Animación</h2>
+            <h2 data-translate="animation_projects.title"></h2>
             <div class="animation-projects" id="animationProjectsSlider">
                 <video muted loop preload="metadata">
                     <source src="vds/DEMOREEL.mp4" type="video/mp4">
@@ -180,28 +180,28 @@
 
         <div class="blogs">
             <img src="imgs/Deco/b_boom.svg" alt="Hero Image">
-            <h2 data-translate="blog.title">Blog</h2>
+            <h2 data-translate="blog.title"></h2>
             <div>
                 <section class="blog-posts" id="blogPostsSlider">
                     <section class="blog">
                         <section class="blog-entry">
-                            <p class="fecha" data-translate="blog.entries.entry2.fecha">22 de Enero, 2024</p>
+                            <p class="fecha" data-translate="blog.entries.entry2.fecha"></p>
                             <h3 data-translate="blog.entries.entry2.title"></h3>
                             <p data-translate="blog.entries.entry2.excerpt"></p>
                         </section>
                         <button class="boton-blog" onclick="openBlog('blog2')">
-                            <span data-translate="blog.readMore">Ver más</span>
+                            <span data-translate="blog.readMore"></span>
                         </button>
                     </section>
 
                     <section class="blog">
                         <section class="blog-entry">
-                            <p class="fecha" data-translate="blog.entries.entry1.fecha">15 de Enero, 2024</p>
-                            <h3 data-translate="blog.entries.entry1.title">Mi experiencia con Unity</h3>
+                            <p class="fecha" data-translate="blog.entries.entry1.fecha"></p>
+                            <h3 data-translate="blog.entries.entry1.title"></h3>
                             <p data-translate="blog.entries.entry1.excerpt"></p>
                         </section>
                         <button class="boton-blog" onclick="openBlog('blog1')">
-                            <span data-translate="blog.readMore">Ver más</span>
+                            <span data-translate="blog.readMore"></span>
                         </button>
                     </section>
                 </section>
@@ -216,8 +216,8 @@
 
 
         <div class="contact" id="contacto">
-            <h2 data-translate="contact.title">¡Hablemos!</h2>
-            <p data-translate="contact.description">Descripción breve sobre cómo pueden contactarme.</p>
+            <h2 data-translate="contact.title"></h2>
+            <p data-translate="contact.description"></p>
             <section class="contact-container">                
                 <section class="contact-item">
                     <a class="contact-btn" href="mailto:agustinavinciguerra@gmail.com">E-mail</a>
