linkedin btn now opens another tab

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 </section>
 
                 <section class="contact-item">
-                    <a class="contact-btn" href="https://www.linkedin.com/in/agustina-vinciguerra">LinkedIn</a>
+                    <a class="contact-btn" href="https://www.linkedin.com/in/agustina-vinciguerra" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 </section>
             </section>
         </div>
